--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
-  "installCommand": "cd frontend && npm install",
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+  "installCommand": "cd frontend && npm install",
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "https://api.coverghar.in/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
